# insurance-recourse

./: README.md  pyproject.toml  run_tests_databricks.py
notebooks/: insurance_recourse_demo.py
src/insurance_recourse/: __init__.py  constraints.py  cost.py  generator.py  report.py
tests/: test_constraints.py  test_cost.py  test_generator.py  test_report.py
