[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-recourse"
version = "0.1.0"
description = "Algorithmic recourse for FCA Consumer Duty in UK personal lines insurance pricing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = ["insurance", "algorithmic-recourse", "counterfactual", "FCA", "consumer-duty", "pricing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dice = ["dice-ml>=0.11"]
alibi = ["alibi>=0.9"]
catboost = ["catboost>=1.2"]
xgboost = ["xgboost>=1.7"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_recourse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring external backends (dice-ml, alibi)",
]
